<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imgazul"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtbase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:text="@string/base">
            </TextView>

            <EditText
                android:id="@+id/edtbase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:inputType="numberDecimal">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtAltura"
                android:text="@string/altura"
                android:textSize="20dp"
                android:textColor="@color/white">
            </TextView>

            <EditText
                android:id="@+id/edtaltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:inputType="numberDecimal">
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Calcular"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:layout_weight="0.5">

            </Button>
            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Limpar"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:layout_weight="0.5">
            </Button>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtResultado"
            android:text="@string/Resultado"
            android:textSize="20dp"
            android:textColor="@color/white">
        </TextView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>